...
    }

    public let reloadPlacement: ReloadPlacement = .bottomToolbar
    public let showsTopReload = false
    public let showsDecorativeBrowserStatus = false
    public let minimumActionSize: CGFloat = 44
    public let cleanModeActionIdentifier = "browser.cleanModeAction"
    public let manualCleanModeActionIdentifier = "browser.tryCleanMode"
    public let closeActionIdentifier = "browser.close"
    public let reloadActionIdentifier = "browser.reload"
    public let backActionIdentifier = "browser.back"
    public let forwardActionIdentifier = "browser.forward"

...
